# GameLab

./: .gitignore  .gitmodules  README.md
Engine/: README.md
Engine/src/: Engine.h
Engine/src/Components/: Components.h  Sprite.h
Engine/src/Core/: App.cpp  App.h  AssetHandler.h  Engine.h  EventHandler.h  EventRegistry.h  GraphicsHandler.cpp  GraphicsHandler.h  InputManager.cpp  InputManager.h
Engine/src/Systems/: Render.h  RenderSystem.cpp  RenderSystem.h  Systems.h
Game1/: .clang-format  CMakeLists.txt  README.md  main.cpp  vcpkg.json
Game1/cmake/: assets.cmake
Game1/src/: Game.cpp  Game.h  Player.cpp  Player.h  Tile.cpp  Tile.h  main.cpp
Game_1_CoinCollector/src/: Player.cpp  Utils.cpp  Utils.h
Game_2_CoinCollector_Refactor/: CMakeLists.txt  vcpkg.json
Game_2_CoinCollector_Refactor/src/: InputManager.cpp  Player.cpp  Player.h  WindowManager.cpp
Game_3_Farmer/: CMakeLists.txt  vcpkg.json
Game_3_Farmer/src/: Entity.h  Player.cpp  Player.h  TimeManager.cpp  TimeManager.h  WorldManager.cpp  WorldManager.h  main.cpp
Game_3_Farmer/src/Components/: Camera.h  Components.h  Player.cpp  Player.h  Position.h  RenderableComponent.cpp  RenderableComponent.h  RenderedComponent.h  Tile.cpp  Tile.h
Game_3_Farmer/src/Engine/: Engine.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  WindowManager.cpp  WindowManager.h
Game_3_Farmer/src/System/: Systems.cpp  Systems.h
Game_3_Farmer/src/Utils/: Vectors.h
Game_3_Tiler/: CMakeLists.txt  readme.md  vcpkg.json
Game_3_Tiler/Engine/: CMakeLists.txt  Engine.h  Includes.h
Game_3_Tiler/Engine/Core/: App.cpp  App.h  AssetManager.cpp  AssetManager.h  Graphic.cpp  Graphics.h  InputManager.h  WindowManager.cpp  WindowManager.h
Game_3_Tiler/src/: App.cpp  App.h  AssetManager.cpp  AssetManager.h  Dispatcher.h  Events.h  main.cpp
Game_3_Tiler/src/Components/: Components.h  Cursor.h  SelectedTile.h  Sprite.h  Tile.h  TileArray.h  Transform.h
Game_3_Tiler/src/Engine/: Alias.h  Engine.h  InputManager.cpp  InputManager.h  Renderer.cpp  Renderer.h  Vectors.h  WindowManager.cpp  WindowManager.h
Game_3_Tiler/src/Engine/Components/: Sprite.h  Transform.h
Game_3_Tiler/src/Engine/Core/: App.cpp  App.h  AssetManager.cpp  AssetManager.h  Dispatcher.h  Graphic.cpp  Graphics.h  InputManager.cpp  InputManager.h  WindowManager.cpp  WindowManager.h
Game_3_Tiler/src/Engine/Systems/: Render.cpp
Game_3_Tiler/src/System/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  TileSystem.cpp  TileSystem.h
Game_3_Tiler/src/Utils/: Noise.cpp  Tile.h  TileUtils.h  Utils.h
Games/Game-1-CoinCollector/: CMakeLists.txt  vcpkg.json
Games/Game-1-CoinCollector/src/: Player.h  main.cpp
Games/Game-2-CoinCollector-Refactor/src/: InputManager.h  Player.cpp  Player.h  Renderer.cpp  Tile.cpp  main.cpp
Games/Game-2-CoinCollector_Refactor/src/: Renderer.h  Tile.h  WindowManager.h
Games/Game-3-Tiler/: .clang-format
Library-Window/: CMakeLists.txt  Window.h  vcpkg.json
Library_App/: App.h  CMakeLists.txt  config.json
Library_AssetRegistry/: AssetRegistry.cpp  AssetRegistry.h  CMakeLists.txt  README.md  config.json
Library_Components/: CMakeLists.txt  Components.h  Sprite.h  config.json
Library_EventRegistry/: EventRegistry.cpp  EventRegistry.h  config.json  vcpkg.json
Library_InputManager/: .clang-format  CMakeLists.txt  InputManager.cpp  InputManager.h  README.md  config.json
Library_InputManger/: CMakeLists.txt  InputManager.cpp  InputManager.h  vcpkg.json
Library_Systems/: CMakeLists.txt  Render.h  Systems.h  config.json
Library_Vector/: CMakeLists.txt  Vector.h  config.json
Library_Window/: Window.cpp
Library_WindowManager/: CMakeLists.txt  Graphics.cpp  Graphics.h  README.md  WindowManager.cpp  WindowManager.h  config.json
SDL2_IMGUI_impl/: .clang-format  CMakeLists.txt
SDL2_IMGUI_impl/src/: imgui.ini  main.cpp
Tools/MetalExample/: CMakeLists.txt  Shaders.metal  main.cpp  vcpkg.json
Tools/MetalExample/cmake/: xcode-setuo.cmake
Tools/MetalExample/metal-cpp/: Metal.hpp
Tools/NewProject/: build.sh  file.go  form.go  git.go  main.go  reader.go  types.go  writer.go
Tools/SDL2_IMGUI_impl/: CMakeLists.txt  README.md
Tools/SDL2_IMGUI_impl/src/: imgui.ini  main.cpp
Tools/Template_Files/: vcpkg.json
Tools/Template_Files/Game/: CMakeLists.txt
Tools/Template_Files/Tool/: CMakeLists.txt
Tools/Tool-4-TileMapper/: CMakeLists.txt  README.md
Tools/Tool-4-TileMapper/Engine/: CMakeLists.txt  vcpkg.json
Tools/Tool-4-TileMapper/Engine/src/: Engine.h
Tools/Tool-4-TileMapper/Engine/src/Components/: Components.h  Sprite.h  Transform.h
Tools/Tool-4-TileMapper/Engine/src/Core/: App.cpp  App.h  AssetHandler.cpp  AssetHandler.h  Engine.h  EventHandler.h  GraphicsHandler.cpp  GraphicsHandler.h  InputManager.cpp  InputManager.h  Resource.h  Vector.h  WindowManager.cpp  WindowManager.h
Tools/Tool-4-TileMapper/Engine/src/Systems/: RenderSystem.cpp  RenderSystem.h  Systems.h
Tools/Tool-4-TileMapper/Engine/src/Utils/: AppSettings.h
Tools/Tool-4-TileMapper/src/: File.h  Panel.cpp  Panel.h  main.cpp  olderTilerMain.cpp
Tools/Tool-4-TileMapper/src/Camera/: Camera.cpp  Camera.h
Tools/Tool-4-tier/: CMakeLists.txt  main.cpp
Tools/Tool-4-tier/Engine/: CMakeLists.txt
Tools/Tool-4-tier/Engine/Library_EventRegistry/: .clang-format  CMakeLists.txt  README.md  config.json
Tools/Tool-4-tier/Engine/Library_InputManager/: README.md  vcpkg.json
Tools/Tool-4-tier/Engine/Library_Systems/: config.json
Tools/Tool-4-tier/Engine/Library_WindowManager/: CMakeLists.txt  config.json
Tools/Tool-4-tier/Engine/src/: Engine.h
Tools/Tool-4-tier/Engine/src/Core/: App.h  AssetRegistry.cpp  AssetRegistry.h  Graphics.h
Tools/Tool-4-tier/src/: main.cpp
Tools/Tool-4-tier/src/Components/: Cursor.h  TileArray.h
Tools/Tool-4-tier/src/System/: InputSystem.cpp  InputSystem.h  TileSystem.cpp  TileSystem.h
Tools/Tool-4-tier/src/Utils/: Noise.h  TileUtils.h
scripts/: README.md
scripts/src/new-project/: build.sh  file.go  form.go  git.go  main.go  reader.go  types.go  writer.go
(+12 files in other folders)
